test/files/neg/xml-quasiquote2.check
xml-quasiquote2.scala:5: error: input ended while parsing XML
    q"<sample xmlns='ns1'>"
                          ^
one error found
